@@ -2,20 +2,54 @@ package org.robolectric.shadows;
 
 import static android.os.Build.VERSION_CODES.Q;
 
+import com.google.common.base.Preconditions;
 import dalvik.system.VMRuntime;
 import java.lang.ref.WeakReference;
 import java.lang.reflect.Array;
+import java.lang.reflect.Method;
+import java.nio.ByteBuffer;
+import java.nio.ByteOrder;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.WeakHashMap;
+import java.util.concurrent.atomic.AtomicLong;
 import javax.annotation.Nullable;
 import org.robolectric.annotation.Implementation;
 import org.robolectric.annotation.Implements;
 import org.robolectric.annotation.Resetter;
-import org.robolectric.res.android.NativeObjRegistry;
 
 @Implements(value = VMRuntime.class, isInAndroidSdk = false)
 public class ShadowVMRuntime {
 
-  private final NativeObjRegistry<WeakReference<Object>> nativeObjRegistry =
-      new NativeObjRegistry<>("VRRuntime.nativeObjectRegistry");
+  /**
+   * A map of allocated non movable arrays to the (Direct)ByteBuffer backing it
+   *
+   * <p>The JVM does not directly support newNonMovableArray. So as a workaround, this class will
+   * allocate a direct ByteBuffer for use in native code. It is the responsibility the shadow code
+   * to update any associated buffers with the data from native code.
+   */
+  private final Map<Object, ByteBuffer> realNonMovableArrays =
+      Collections.synchronizedMap(new WeakHashMap<>());
+
+  private final Map<Long, WeakReference<Object>> nonMovableArraysReverse =
+      Collections.synchronizedMap(new HashMap<>());
+
+  /**
+   * Currently, {@link android.content.res.TypedArray} uses newNonMovableArray, but does not need to
+   * access the data from native code. So in this case we will allocate a fake pointer.
+   */
+  private final Map<Object, Long> fakeNonMovableArrays =
+      Collections.synchronizedMap(new WeakHashMap<>());
+
+  private final AtomicLong nextFakeArrayPointer = new AtomicLong();
+
+  // This is a hack to get the address of a DirectByteBuffer. The Method object is cached to reduce
+  // the overhead of reflection. This method is invoked extensively during layout inflation. This
+  // reflection requires the `--add-opens=java.base/java.nio=ALL-UNNAMED` JVM flag. This value is
+  // lazy so tests can avoid having to add the flag where it is not needed.
+  private static Method addressMethod;
+
   // There actually isn't any android JNI code to call through to in Robolectric due to
   // cross-platform compatibility issues. We default to a reasonable value that reflects the devices
   // that would commonly run this code.
@@ -30,21 +64,83 @@ public class ShadowVMRuntime {
 
   @Implementation
   public Object newNonMovableArray(Class<?> type, int size) {
-    if (type.equals(int.class)) {
-      return new int[size];
+    Preconditions.checkArgument(
+        type == int.class || type == float.class, "unsupported type %s", type.getName());
+    Object arrayInstance = Array.newInstance(type, size);
+    if (type == float.class && size == 8) {
+      // This is being called from android.graphics.PathIterator, so we need to allocate a real
+      // ByteBuffer that can be accessed from native code.
+      ByteBuffer byteBuffer = ByteBuffer.allocateDirect(4 * size);
+      byteBuffer.order(ByteOrder.nativeOrder());
+      realNonMovableArrays.put(arrayInstance, byteBuffer);
+      nonMovableArraysReverse.put(
+          getAddressOfDirectByteBuffer(byteBuffer), new WeakReference<>(arrayInstance));
+    } else {
+      // This is being called from android.content.res.TypedArray, so we need to allocate a fake
+      // pointer.
+      long fakePointer = nextFakeArrayPointer.incrementAndGet();
+      fakeNonMovableArrays.put(arrayInstance, fakePointer);
+      nonMovableArraysReverse.put(fakePointer, new WeakReference<>(arrayInstance));
     }
-    return null;
+    return arrayInstance;
   }
 
   /** Returns a unique identifier of the object instead of a 'native' address. */
   @Implementation
   public long addressOf(Object obj) {
-    return nativeObjRegistry.register(new WeakReference<>(obj));
+    if (obj == null) {
+      return 0;
+    }
+    Preconditions.checkArgument(
+        obj.getClass().isArray(), "addressOf(Object) is only supported for array objects");
+    Class<?> arrayClass = obj.getClass().getComponentType();
+    Preconditions.checkArgument(
+        arrayClass.isPrimitive(),
+        "addressOf(Object) is only supported for primitive array objects");
+    if (arrayClass == float.class && Array.getLength(obj) == 8) {
+      // This is being called from android.graphics.PathIterator.
+      ByteBuffer byteBuffer = realNonMovableArrays.get(obj);
+      if (byteBuffer == null) {
+        throw new IllegalArgumentException("Trying to get address of unknown object");
+      }
+      return getAddressOfDirectByteBuffer(byteBuffer);
+    } else {
+      // This is being called from android.content.res.TypedArray.
+      Long address = fakeNonMovableArrays.get(obj);
+      if (address == null) {
+        throw new IllegalArgumentException("Trying to get address of unknown object");
+      }
+      return address;
+    }
+  }
+
+  private long getAddressOfDirectByteBuffer(ByteBuffer byteBuffer) {
+    synchronized (ShadowVMRuntime.class) {
+      if (addressMethod == null) {
+        try {
+          addressMethod = Class.forName("java.nio.DirectByteBuffer").getMethod("address");
+          addressMethod.setAccessible(true);
+        } catch (ReflectiveOperationException e) {
+          throw new LinkageError("Error accessing address method", e);
+        }
+      }
+    }
+
+    try {
+      return (long) addressMethod.invoke(byteBuffer);
+    } catch (ReflectiveOperationException e) {
+      throw new LinkageError("Error invoking address method", e);
+    }
   }
 
   /** Returns the object previously registered with {@link #addressOf(Object)}. */
-  public @Nullable Object getObjectForAddress(long address) {
-    return nativeObjRegistry.getNativeObject(address).get();
+  @Nullable
+  Object getObjectForAddress(long address) {
+    WeakReference<Object> weakReference = nonMovableArraysReverse.get(address);
+    if (weakReference == null) {
+      return null;
+    }
+    return weakReference.get();
   }
 
   /**
@@ -69,6 +165,14 @@ public class ShadowVMRuntime {
   /** Sets the instruction set of the current runtime. */
   public static void setCurrentInstructionSet(@Nullable String currentInstructionSet) {
     ShadowVMRuntime.currentInstructionSet = currentInstructionSet;
+  }
+
+  ByteBuffer getBackingBuffer(long address) {
+    Object array = getObjectForAddress(address);
+    if (array == null) {
+      return null;
+    }
+    return realNonMovableArrays.get(array);
   }
 
   @Resetter
